Fixes Select2 cutting off long input field placeholder text

--- a/assets/css/src/settings.styl
+++ b/assets/css/src/settings.styl
@@ -6,6 +6,10 @@
   .form-table th
     width 20em
 
+  .select2-selection--multiple .select2-search--inline .select2-search__field {
+    width: auto !important
+  }
+
   // sending methods
   .mailpoet_sending_methods
     margin 25px 0 0 0
